# OpenDEEP

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json.def  Readme.md
.github/workflows/: ci.yml  clang-tidy.yml
app/: main.c  main.cpp
cmake/: pico_size_tool.cmake
ext_boards/opendeep.pba001.v01/: Readme.md  ext_board.cmake
ext_boards/opendeep.pba001.v01/bsp/: bsp.cpp  bsp.hpp
scripts/: font_converter.py  generate_presets.py  reconvert_all_fonts.sh
src/MS5837/: MS5837.cpp  MS5837.hpp
src/fonts/: fonts.hpp  oswald_regular_12.cpp  oswald_regular_16.cpp  oswald_regular_20.cpp  oswald_regular_24.cpp  oswald_regular_36.cpp
src/i2c_tools/: i2c_tools.cpp  i2c_tools.hpp
src/lcd/: GC9107.cpp  GC9107.hpp  bitmaps.cpp  bitmaps.hpp  demo.cpp  demo.hpp  graphics.cpp  graphics.hpp  lcd.cpp  lcd.hpp
src/platform/: platform.cpp  platform.hpp
src/static_fonts/: fonts.hpp
